[tool.poetry]                                                                                                                                                                             
name = "tapedeck"                                                                                                                                                                         
version = "0.1.0"                                                                                                                                                                         
description = "A simple proxy service to record and replay HTTP requests."                                                                                                                
authors = ["Daniel Grossmann-Kavanagh <me@danielgk.com>"]                                                                                                                                 
                                                                                                                                                                                          
[tool.poetry.dependencies]                                                                                                                                                                
python = "^3.8"                                                                                                                                                                           
Flask = "^2.0.1"                                                                                                                                                                          
requests = "^2.25.1"                                                                                                                                                                      
click = "^8.0.1"                                                                                                                                                                          
requests-mock = "^1.11.0"
black = "^23.11.0"
                                                                                                                                                                                          

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]                                                                                                                                                                            
requires = ["poetry-core>=1.0.0"]                                                                                                                                                         
build-backend = "poetry.core.masonry.api"     
